deploy/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: dorfentwicklung
  labels:
    app: website
spec:
  selector:
    app: website
  ports:
    - name: http
      port: 8080
      targetPort: 8080
